--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
     "@tailwindcss/line-clamp": "^0.4.4",
     "fa": "^1.0.1",
     "prop-types": "^15.8.1",
